Actualizar Experience.astro
add link to roulette hero site

--- a/src/components/Landing/Experience.astro
+++ b/src/components/Landing/Experience.astro
@@ -13,7 +13,7 @@ import ExperienceCard from "../ExperienceCard.astro"
 		</p>
 		<p>
 			¡Toma tus decisiones y sumérgete en esta emocionante experiencia <a
-				href="#ROULETTEHERO">
+				href="https://roulette-hero.vercel.app">
 				Aquí
 			</a>!
 		</p>
