--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,7 +1,7 @@
 <div>
 	<header>
 		<div class="menu-bg"></div>
-		<h3 class="fs-5">Luca Javier</h3>
+		<a href="#home" class="fs-5"><b>Luca Javier</b></a>
 
 		<img src="assets/icons/burguer.svg" alt="Burguer button" class="menu-btn" />
 
@@ -48,6 +48,10 @@
 	nav > a {
 		color: var(--primary);
 		padding: 0 1rem;
+	}
+
+	.fs-5:hover {
+		color: var(--primary);
 	}
 
 	a.isActive {
