--- a/src/components/Landing/Contact.astro
+++ b/src/components/Landing/Contact.astro
@@ -7,7 +7,7 @@ import socials from "../../constants/socials.json"
 	<form>
 		<div class="loader-container">
 			<div class="loader">
-				<img src="/loader.svg" alt="Loader" />
+				<img src="loader.svg" alt="Loader" />
 			</div>
 			<textarea name="message" value="" placeholder="Hola, que tal..." required>
 			</textarea>
