--- a/src/components/Landing/Experience.astro
+++ b/src/components/Landing/Experience.astro
@@ -18,7 +18,7 @@ import ExperienceCard from "../ExperienceCard.astro"
 			</a>!
 		</p>
 		<img
-			src="assets/proyects/RH.png"
+			src="assets/proyects/RH1.png"
 			alt="Roulette Hero screenshot"
 			slot="image"
 		/>
