RH experience updated

--- a/src/components/Landing/Experience.astro
+++ b/src/components/Landing/Experience.astro
@@ -6,16 +6,14 @@ import ExperienceCard from "../ExperienceCard.astro"
 	<h2 class="decorated-title fs-1">Experiencia</h2>
 	<ExperienceCard title="Roulette Hero">
 		<p>
-			Proyecto de juego de aventura y rol web, donde la suerte es tu compañera.
-			Explora un mundo lleno de posibilidades donde tus decisiones moldearán tu
-			destino.¿ Serás un desgraciado muy fuerte o una persona gentíl y bondadosa
-			confiada en que todo regresa?
+			Un juego web al que le dedique 3 meses de puro diseño, desarrollo y
+			aprendizaje. Adquirí mucho conocimiento sobre como desarrollador sobre
+			hacer código limpio, planear cuidadosamente antes de escribir para evitar
+			reescribirlo o borrarlo, graficar las ideas y siempre planear todo con
+			antelación para ahorrarse problemas en el futuro
 		</p>
 		<p>
-			¡Toma tus decisiones y sumérgete en esta emocionante experiencia <a
-				href="https://roulette-hero.vercel.app">
-				Aquí
-			</a>!
+			Pruebalo <a href="https://roulette-hero.vercel.app">Aquí</a>!
 		</p>
 		<img
 			src="assets/proyects/RH.png"
