--- a/src/components/Notification/Notification.astro
+++ b/src/components/Notification/Notification.astro
@@ -27,7 +27,7 @@
 		transition: opacity 0.4s;
 	}
 	div {
-		pointer-events: all;
+		pointer-events: none;
 		display: inline-block;
 		background-color: #1b172a;
 		text-align: center;
@@ -37,6 +37,7 @@
 	}
 	article.isActive {
 		opacity: 1;
+		pointer-events: all;
 	}
 
 	.notification-succes-img + img {
