--- a/src/components/Header/burguerMenu.css
+++ b/src/components/Header/burguerMenu.css
@@ -1,7 +1,10 @@
 .menu-bg {
 	position: fixed;
 	opacity: 0;
-	inset: 0;
+	bottom: 0;
+	top: var(--header-height);
+	left: 0;
+	width: 100vw;
 	background-color: var(--second);
 	z-index: 90;
 	pointer-events: none;
@@ -22,18 +25,29 @@
 		display: block;
 	}
 	.menu {
-		opacity: 0;
+		background-color: #2a233e;
+		height: 100vh;
+		width: 40vw;
 		right: -300px;
 		display: flex;
-		gap: 1rem;
+		gap: 0;
 		flex-direction: column;
 		position: absolute;
 		transition: right 0.5s ease-out, opacity 1s;
 		top: var(--header-height);
 		z-index: 100;
 	}
+	.menu a {
+		display: flex;
+		align-items: center;
+		height: 3rem;
+		margin: 0;
+	}
+	.menu a:hover {
+		background-color: var(--primary);
+		color: var(--second);
+	}
 	.menu.isActive {
-		opacity: 1;
 		right: 0;
 	}
 	.menu-bg.isActive {
