--- a/src/components/Landing/Contact.astro
+++ b/src/components/Landing/Contact.astro
@@ -9,7 +9,7 @@ import socials from "../../constants/socials.json"
 			<div class="loader">
 				<img src="loader.svg" alt="Loader" />
 			</div>
-			<textarea name="message" value="" placeholder="Hola, que tal..." required>
+			<textarea name="message" placeholder="Hola, que tal..." required>
 			</textarea>
 		</div>
 		<input type="submit" value="Enviar" />
