--- a/src/components/Notification/Notification.astro
+++ b/src/components/Notification/Notification.astro
@@ -16,7 +16,7 @@
 </article>
 
 <style>
-	article {
+	.notification {
 		text-align: center;
 		position: absolute;
 		top: 200px;
@@ -35,7 +35,7 @@
 		border-radius: 15px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 	}
-	article.isActive {
+	.notification.isActive {
 		opacity: 1;
 		pointer-events: all;
 	}
