--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -59,7 +59,8 @@ const { title, rotate } = Astro.props
 		div {
 			display: initial;
 		}
-		article {
+		article,
+		.img-container {
 			width: 100%;
 			align-items: center;
 			height: auto;
