--- a/src/components/Landing/Experience.astro
+++ b/src/components/Landing/Experience.astro
@@ -13,7 +13,12 @@ import ExperienceCard from "../ExperienceCard.astro"
 			antelación para ahorrarse problemas en el futuro
 		</p>
 		<p>
-			Pruebalo <a href="https://roulette-hero.vercel.app">Aquí</a>!
+			Pruebalo <a
+				target="_blank"
+				rel="noopener"
+				href="https://roulette-hero.vercel.app">
+				Aquí
+			</a>!
 		</p>
 		<img
 			src="assets/proyects/RH.png"
