--- a/src/components/Landing/Home.astro
+++ b/src/components/Landing/Home.astro
@@ -9,7 +9,7 @@
 		</p>
 	</article>
 	<div class="img-container">
-		<img src="fachero.jpg" alt="Luca Javier" />
+		<img src="fachero.webp" alt="Luca Javier" />
 	</div>
 </div>
 
